--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,7 +3,13 @@
 {% load static %}
 
 {% block content %}
-
+<!-- <style>
+  img {
+   -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
+  }
+</style> -->
 <div id="demo" class="carousel slide" data-ride="carousel">
 <!-- Indicators -->
 <ul class="carousel-indicators">
@@ -13,21 +19,21 @@
 </ul>
 
 <!-- The slideshow -->
-<div class="carousel-inner">
+<div class="carousel-inner" style="box-shadow:         inset 5px 5px 10px #000000;">
   <div class="carousel-item active">
-    <img src="{% static 'images/p1.jpg' %}" style="object-fit: cover; height:550px; width:1350px" alt="Bhaktapur Durbar Square">
+    <img class="d-block w-100" src="{% static 'images/p1.jpg' %}" style="object-fit: cover; " alt="Bhaktapur Durbar Square">
     <div class="carousel-caption">
       <h3>Bhaktapur Durbar Square</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img src="{% static 'images/p2.jpg' %}" style="object-fit: cover; height:550px; width:1350px" alt="Chitwan NP">
+    <img class="d-block w-100 "  src="{% static 'images/p2.jpg' %}" style="object-fit: cover;  " alt="Chitwan NP">
     <div class="carousel-caption">
       <h3>Chitwan NP</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img src="{% static 'images/p3.jpg' %}" style="object-fit: cover; height:550px; width:1350px" alt="Poon Hill">
+    <img class="d-block w-100" src="{% static 'images/p3.jpg' %}" style="object-fit: cover; " alt="Poon Hill">
     <div class="carousel-caption">
       <h3>Tilicho Lake</h3>
     </div>
@@ -45,25 +51,39 @@
  <!-- Article View -->
 
 </div>
+<p style=" margin: 10px; color:silver">With this app Travellers will be able to get response to their queries and also get the facilities and information anytime and anywhere. This will also help in enhancing local tourism industries which can provide the travellers the new experience of different traditions and cultures. The suggestions of various tourism sites whether it is for a religious tourism or sport tourism can be easily obtained within few minutes. This app will reduce the time taken to complete tasks while improving the accuracy of processes and outcomes. It provides recommendations to the customer based on his search history and past purchase history
+  Furthermore, event notifications of nearby places can be easily done using this app. At the testing stage, the scope of this project primarily focuses on the travellers to provide them information about tourist destinations in Nepal along with the various activities that can be done in various places and also recommend nearby hotels, spas, resort, medical facilities.
+  </p>
+  <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;">
+        <hr style="opacity: 0;">
+      </div>
 <section class="mb-4 ml-3">
   <div class="container-fluid">
-      <h1 class="text-center text-light text-capitalizeb pt-5">Most Visited</h1>
-      <hr class="w-25 mx-auto pt-5">
-
+      <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-40px;">Most Visited</h1>
+      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
+        <hr style="opacity: 0;">
+      </div>
       <!-- Looping for each article saved in the database -->
       {% for article in articles %}
 
       <div class="row mb-5">
         <div class="col-lg-g col-md-6 ">
-          <a href="{% url 'articles:detail' slug=article.slug %}"><img src="{{ article.thumb.url }}" style="object-fit: cover; height:300px; width:600px" class="img-fluid"></a>
+          <a href="{% url 'articles:detail' slug=article.slug %}"><img src="{{ article.thumb.url }}" style="object-fit: cover; height:300px; width:600px ;box-shadow: 2px 2px 3px rgb(75, 74, 74); border-radius : 5px ;" class="img-fluid"></a>
         </div>
         <div class="col-lg-g col-md-6 ">
           <h1 class="text-light"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}" style="text-decoration : none;">{{ article.title }}</a></h1>
-          <p>
+          <p style="color: silver;">
             {{ article.snippet }}
           </p>
           <button class="btn bg-dark text-white"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
+        
         </div>
+        <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
+        <hr style="opacity: 0;">
+      </div>
+      </div>
+      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
+        <hr style="opacity: 0;">
       </div>
 
       {% endfor %}
@@ -75,19 +95,24 @@
 
   <section class="mb-4 ml-3 mr-3">
     <div class="container-fluid">
-      <h1 class="text-center text-light text-capitalizeb pt-5">Recommended</h1>
-      <hr class="w-25 mx-auto pt-5">
+      <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-60px;" >Recommended</h1>
+      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
+        <hr style="opacity: 0;">
+      </div>
       <div class="row ">
 
         {% for cardd in cards %}
         <div class="col-lg-4 col-md-4 col-12">
-          <div class="card mb-3" style="width:400px; height: 550px;">
-              <img class="card-img-top" src="{{ cardd.thumb.url }}" alt="Card image" style="height:200px;">
+          <div class="card mb-3" style="width:400px; height: 550px;border-radius: 50px;">
+              <img class="card-img-top" src="{{ cardd.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
               <div class="card-body">
                 <h4 class="card-title">{{ cardd.title }}</h4>
+                <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
+                  <hr style="opacity: 0;">
+                </div>
                 <p class="card-text">{{ cardd.snippet }}</p>
                 <div class="align-self-start">
-                  <a href="{% url 'articles:detail' slug=cardd.slug %}" class="btn btn-dark">More</a>
+                  <a href="{% url 'articles:detail' slug=cardd.slug %}" class="btn btn-dark stretched-link">More</a>
                 </div>
               </div>
           </div>
