--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -3,20 +3,24 @@
 {% load static %}
 
 {% block content %}
-<hr class="w-25  mx-auto pt-5">
+<hr class="w-25  mx-auto pt-5" >
 <div class="ml-3  mr-3 article-detail">
-	<hr class="w-25 mx-auto pt-5">
+	<hr class="w-25 mx-auto pt-5"style="color:white;">
 	<h1 class=" mb-3 text-light">{{article.title}}</h1>
-   	<p class="">
+	<div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: 10px;margin-left: -3px;">
+                  <hr style="opacity: 0;">
+                </div>
+   	<p class="" style="color: silver;">
 		 {{article.body}}
   	</p>
 
 		<div class="row mb-5">
           <div class="col-lg-g col-md-6 ">
             <img src="{{article.img1.url}}" class="img-fluid mt-5">
+			
           </div>
           <div class="col-lg-g col-md-6 ">
-            <p class="mt-5 ">
+            <p class="mt-5 "style="color: silver;">
 							{{article.body}}
             </p>
           </div>
@@ -24,7 +28,7 @@
 
 	    <div class="row mb-5">
 	      <div class="col-lg-g col-md-6 ">
-	        <p class="mt-5 ">
+	        <p class="mt-5 "style="color: silver;">
 						{{article.body1}}
 	        </p>
 	      </div>
