miscellaneous design change

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="w-50 mx-auto">
   <div >
-          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: 10px ;margin-top: 54px;margin-left: -3px;">
+          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) ); height: 2px; margin: 10px ;margin-top: 54px;margin-left: -3px;">
             <hr style="opacity: 0;">
           </div>
           <h1 style="color: silver;"> Login In</h1>
-          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: px;margin-left: -3px;">
+          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) ); height: 2px; margin: px;margin-left: -3px;">
                   <hr style="opacity: 0;">
           </div>
 
