--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -5,11 +5,11 @@
 
   <div class="">
     
-    <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: 10px ;margin-top: 54px;margin-left: -3px;">
+    <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) ); height: 2px; margin: 10px ;margin-top: 54px;margin-left: -3px;">
       <hr style="opacity: 0;">
     </div>      
     <h1 style="color: silver;">Sign Up</h1>
-          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: px;margin-left: -3px;">
+          <div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0)); height: 2px; margin: px;margin-left: -3px;">
             <hr style="opacity: 0;">
     </div>
   </div>
