Update requirements.txt and put Navbar.css in assets folder

--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>Tourism Aid</title>
-    <link rel="stylesheet" href="Navbar.css">
+    <link rel="stylesheet" href="{% static 'Navbar.css' %}">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
