--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -50,12 +50,7 @@
                 </center>
 
                     <li class="nav-item ">
-                    <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-	                {% if user.is_authenticated %}
-                        <a class="nav-link" href="#">{{ user.username }}</a>
-		            {% endif %}
+                    <a class="nav-link" href="{% url 'articles' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- <li class="nav-item">
@@ -84,6 +79,9 @@
                 </li> -->
 
                 {% if user.is_authenticated %}
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">{{ user.username }}</a>
+                    </li>
                     <li class="nav-item">
                         <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
                             {% csrf_token %}
