--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,75 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-		
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% extends 'bs_base_layout.html' %}
 
-		<style type="text/css">
-      body{
-        background-image:url(images/bg.jpg);
-      }
-      *{
-        margin: 0; padding: 0; font-family:  'Josefin Sans',  sans-serif;
-      }
-  /* Make the image fully responsive */
-  .carousel-inner img {
-      width: 100%;
-      height: 100%;
-  }
-  </style>
-  
-</head>
-<body>
-	<header class="ml-4">
-		<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">
-  	<img src="images/logo big.png" width="400 " height="060" class="d-inline-block align-top" alt="">
-    </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      
-
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit"> <i class="fa fa-search"></i></button>
-    </form>
-    <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"> Hotels </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About us</a>
-      </li>
-      
-      
-      <li class="nav-item">
-        <a class="nav-link" href="signup.html">Sign In</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{% block content %}
  <hr class="w-25 mx-auto pt-5"><div class="row mb-5">
   <div class="container">
-    
     <h1 class="text-center mt-5 bg-dark text-light   mt-5" >About Us</h1>
-
-     
-    <p></p>
   </div>
-</div>
+  </div>
 <hr class="w-25 mx-auto pt-5"><div class="row mb-5">
 <p class="    ">With this app Travellers will be able to get response to their queries and also get the facilities and information anytime and anywhere. This will also help in enhancing local tourism industries which can provide the travellers the new experience of different traditions and cultures. The suggestions of various tourism sites whether it is for a religious tourism or sport tourism can be easily obtained within few minutes. This app will reduce the time taken to complete tasks while improving the accuracy of processes and outcomes. It provides recommendations to the customer based on his search history and past purchase history
 Furthermore, event notifications of nearby places can be easily done using this app. At the testing stage, the scope of this project primarily focuses on the travellers to provide them information about tourist destinations in Nepal along with the various activities that can be done in various places and also recommend nearby hotels, spas, resort, medical facilities.
@@ -121,8 +57,5 @@ Furthermore, event notifications of nearby places can be easily done using this 
       </div>  
     
     </section>      
-</header>
-<fooetr>
-    <p class="text-center bg-dark text-light"> © Copright Reserved</p>
-  </fooetr>
-</body>
+
+{% endblock %}
