--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -35,7 +35,7 @@
   <div class="carousel-item">
     <img class="d-block w-100" src="{% static 'images/p3.jpg' %}" style="object-fit: cover; " alt="Poon Hill">
     <div class="carousel-caption">
-      <h3>Tilicho Lake</h3>
+      <h3>Poon Hill</h3>
     </div>
   </div>
 </div>
@@ -50,6 +50,13 @@
 
  <!-- Article View -->
 
+</div>
+<div  style="background-image: linear-gradient(to right, silver, rgb(0, 0, 0,0)30%); height: 2px;margin: 10px;">
+  <hr style="opacity: 0;">
+</div>
+<h4 style="padding-top: 6px;padding-left:5px ; color: silver;">'Tourism-Aid'</h4>
+<div  style="background-image: linear-gradient(to right, silver, rgb(0, 0, 0,0)30%); height: 2px;margin: 10px;">
+  <hr style="opacity: 0;">
 </div>
 <p style=" margin: 10px; color:silver">With this app Travellers will be able to get response to their queries and also get the facilities and information anytime and anywhere. This will also help in enhancing local tourism industries which can provide the travellers the new experience of different traditions and cultures. The suggestions of various tourism sites whether it is for a religious tourism or sport tourism can be easily obtained within few minutes. This app will reduce the time taken to complete tasks while improving the accuracy of processes and outcomes. It provides recommendations to the customer based on his search history and past purchase history
   Furthermore, event notifications of nearby places can be easily done using this app. At the testing stage, the scope of this project primarily focuses on the travellers to provide them information about tourist destinations in Nepal along with the various activities that can be done in various places and also recommend nearby hotels, spas, resort, medical facilities.
