--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -29,7 +29,7 @@
 		<nav class="navbar fixed-top navbar-expand-lg py-0 navbar-dark " style="background-color: #000000; height: 47px; box-shadow: 2px 2px 10px rgb(34, 33, 33);" >
 
                         <!-- logo -->
-            <a class="navbar-brand" href="{% url 'home' %}">
+            <a class="navbar-brand" href="{% url 'articles' %}">
                 <img src="{% static 'logo_big.png'%}" width="300 " height="050" class="d-inline-block align-top" alt="">
                 </a>
 
@@ -44,7 +44,7 @@
                     <center>
                 <form class="form-inline mx-auto my-2 my-lg-0" style="background-color: white; border-radius: 50px; padding-left: 20px;padding-right: 12px;">
 
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="border: none;" >
+                        <input class="form-control mr-sm-2" type="search" placeholder="where next...?" aria-label="Search" style="border: none;" >
                 <button class="btn btn-outline-secondary  my-2 my-sm-0" type="submit" style="border: none; background-color: white; color: gray; "> <i class="fa fa-search"></i></button>
                 </form>
                 </center>
