--- a/templates/bs_base_layout.html
+++ b/templates/bs_base_layout.html
@@ -4,13 +4,13 @@
 <html>
 <head>
 	<title>Tourism Aid</title>
-
+		<link rel="icon" href="/favicon.ico" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'Signup.css' %}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="shortcut icon"href="/favicon.ico"type="image/x-icon">.
+		
 		<style type="text/css">
 			
 			*{
