Implemented the recommender engine in view.py of articles which gives the 3 most similar articles to the user's preferences

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -126,6 +126,24 @@
         </div>
         {% endfor %}
 
+        {% for rec in recommend %}
+        <div class="col-lg-4 col-md-4 col-12">
+          <div class="card mb-3" style="width:400px; height: 550px;border-radius: 50px;">
+              <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
+              <div class="card-body">
+                <h4 class="card-title">{{ rec.title }}</h4>
+                <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
+                  <hr style="opacity: 0;">
+                </div>
+                <p class="card-text">{{ rec.snippet }}</p>
+                <div class="align-self-start">
+                  <a href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark stretched-link">More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+        {% endfor %}
+
         <!-- <div class="col-lg-4 col-md-4 col-12">
           <div class="card" style="width:400px">
               <img class="card-img-top" src="images/p2.jpg" alt="Card image">
