--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -61,54 +61,22 @@
 <p style=" margin: 10px; color:silver">With this app Travellers will be able to get response to their queries and also get the facilities and information anytime and anywhere. This will also help in enhancing local tourism industries which can provide the travellers the new experience of different traditions and cultures. The suggestions of various tourism sites whether it is for a religious tourism or sport tourism can be easily obtained within few minutes. This app will reduce the time taken to complete tasks while improving the accuracy of processes and outcomes. It provides recommendations to the customer based on his search history and past purchase history
   Furthermore, event notifications of nearby places can be easily done using this app. At the testing stage, the scope of this project primarily focuses on the travellers to provide them information about tourist destinations in Nepal along with the various activities that can be done in various places and also recommend nearby hotels, spas, resort, medical facilities.
   </p>
-  <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;">
-        <hr style="opacity: 0;">
-      </div>
-<section class="mb-4 ml-3">
-  <div class="container-fluid">
-      <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-40px;">Most Visited</h1>
-      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
-        <hr style="opacity: 0;">
-      </div>
-      <!-- Looping for each article saved in the database -->
-      {% for article in articles %}
-
-      <div class="row mb-5">
-        <div class="col-lg-g col-md-6 ">
-          <a href="{% url 'articles:detail' slug=article.slug %}"><img src="{{ article.thumb.url }}" style="object-fit: cover; height:300px; width:600px ;box-shadow: 2px 2px 3px rgb(75, 74, 74); border-radius : 5px ;" class="img-fluid"></a>
-        </div>
-        <div class="col-lg-g col-md-6 ">
-          <h1 class="text-light"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}" style="text-decoration : none;">{{ article.title }}</a></h1>
-          <p style="color: silver;">
-            {{ article.snippet }}
-          </p>
-          <button class="btn bg-dark text-white"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
-        
-        </div>
-        <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
-        <hr style="opacity: 0;">
-      </div>
-      </div>
-      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
-        <hr style="opacity: 0;">
-      </div>
-
-      {% endfor %}
-
-  </div>
-</section>
+  
 
 <!-- Cards -->
 
   <section class="mb-4 ml-3 mr-3">
     <div class="container-fluid">
+      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;margin-bottom: 25px; ">
+        <hr style="opacity: 0;">
+      </div>
       <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-60px;" >Recommended</h1>
       <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
         <hr style="opacity: 0;">
       </div>
       <div class="row ">
 
-        {% for cardd in cards %}
+        <!-- {% for cardd in cards %}
         <div class="col-lg-4 col-md-4 col-12">
           <div class="card mb-3" style="width:400px; height: 550px;border-radius: 50px;">
               <img class="card-img-top" src="{{ cardd.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
@@ -124,7 +92,7 @@
               </div>
           </div>
         </div>
-        {% endfor %}
+        {% endfor %} -->
 
         {% for rec in recommend %}
         <div class="col-lg-4 col-md-4 col-12">
@@ -178,5 +146,40 @@
     </div>
 
   </section>
+  <section class="mb-4 ml-3">
+    <div class="container-fluid">
+      <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 10px;">
+        <hr style="opacity: 0;">
+      </div>  
+      <h1 class="text-center text-light text-capitalizeb pt-5"style="margin-top:-40px;">New Entries</h1>
+        <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
+          <hr style="opacity: 0;">
+        </div>
+        <!-- Looping for each article saved in the database -->
+        {% for article in articles %}
+  
+        <div class="row mb-5">
+          <div class="col-lg-g col-md-6 ">
+            <a href="{% url 'articles:detail' slug=article.slug %}"><img src="{{ article.thumb.url }}" style="object-fit: cover; height:300px; width:600px ;box-shadow: 2px 2px 3px rgb(75, 74, 74); border-radius : 5px ;" class="img-fluid"></a>
+          </div>
+          <div class="col-lg-g col-md-6 ">
+            <h1 class="text-light"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}" style="text-decoration : none;">{{ article.title }}</a></h1>
+            <p style="color: silver;">
+              {{ article.snippet }}
+            </p>
+            <button class="btn bg-dark text-white"><a class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
+          
+          </div>
+          <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
+          <hr style="opacity: 0;">
+        </div>
+        </div>
+        
+  
+        {% endfor %}
+  
+    </div>
+  </section>
+  
 
 {% endblock %}
