--- a/templates/bs_base_layout.html
+++ b/templates/bs_base_layout.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>Tourism Aid</title>
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" type="image/ico" href="media/favicon.ico" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
