--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -4,13 +4,13 @@
 
 {% block content %}
 <hr class="w-25  mx-auto pt-5" >
-<div class="ml-3  mr-3 article-detail">
+<div class="ml-3  mr-3 article-detail" >
 	<hr class="w-25 mx-auto pt-5"style="color:white;">
 	<h1 class=" mb-3 text-light">{{article.title}}</h1>
 	<div  style="background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin: 10px;margin-left: -3px;">
                   <hr style="opacity: 0;">
                 </div>
-   	<p class="" style="color: silver;">
+   	<p class="" style="color: silver;" style="margin: 13px;">
 		 {{article.body}}
   	</p>
 
