minor design changes

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -115,7 +115,7 @@
           </div>
           {% endfor %}
         {% else %}
-          <h5 style="margin:15px ;"> **Please Sign In to see personalised recommendations**</h4>
+          <h5 style="margin: auto ;"> **Please Sign In to see personalised recommendations**</h4>
         {% endif %}
 
         <!-- <div class="col-lg-4 col-md-4 col-12">
