--- a/templates/home.html
+++ b/templates/home.html
@@ -27,9 +27,9 @@
       <hr style="opacity: 0;">
     </div>
 </ul>
- 
-<div onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px solid silver'  " class="home">
-        <a class="nav-link" onmouseover="this.style.color='black';" onmouseout="this.style.color='silver';" href="{% url 'articles' %}" style="color: silver;">GO TO HOMEPAGE</a>
-</div>  
+
+<div onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px solid silver'  " class="home"style="width:11%; margin:auto; border-radius:10px; border: '2px solid silver'" >
+        <a class="nav-link" onmouseover="this.style.color='black';" style="text-align: center;color: silver; " onmouseout="this.style.color='silver';" href="{% url 'articles' %}" style="color: silver; border:2px sold silver ;">GO TO HOMEPAGE</a>
+</div>    
 
 {% endblock %}
