--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -49,8 +49,12 @@
                 </form>
                 </center>
 
-                    <li class="nav-item ">
+                <li class="nav-item ">
                     <a class="nav-link" href="{% url 'articles' %}">Home<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item ">
+                    <a class="nav-link" href="{% url 'all_articles' %}">Articles<span class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- <li class="nav-item">
