all article.html page designed and named it Landmarks in navbar

--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -179,7 +179,11 @@
             <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
             <hr style="opacity: 0;">
           </div>
+          
           </div>
+          <div  style="opacity: .15; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
+            <hr style="opacity: 0;">
+        </div>
   
         {% endfor %}
   
