--- a/articles/templates/articles/all_articles.html
+++ b/articles/templates/articles/all_articles.html
@@ -3,10 +3,18 @@
 {% load static %}
 
 {% block content %}
-
+<div style="margin-top: 65px; margin-left: 10px;">
+    <div  style="width: 35%; background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin:20px;">
+		<hr style="opacity: 0;">
+	</div>
+    <h2 style="margin:20px;color: silver;">Landmarks</h2>
+    <div  style=" background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin:20px;width: 35%;">
+		<hr style="opacity: 0;">
+	</div>
+</div>
     {% for article in articles %}
-  
-        <div class="row mb-5">
+        
+        <div class="row mb-5" style="margin: 20px; " >
         <div class="col-lg-g col-md-6 ">
             <a href="{% url 'articles:detail' slug=article.slug %}"><img src="{{ article.thumb.url }}" style="object-fit: cover; height:300px; width:600px ;box-shadow: 2px 2px 3px rgb(75, 74, 74); border-radius : 5px ;" class="img-fluid"></a>
         </div>
@@ -17,38 +25,42 @@
             </p>
             <button  class="btn bg-dark text-white"><a  class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
         
+        
         </div>
         <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
         <hr style="opacity: 0;">
         </div>
+        </div>
+        <div  style="opacity: .15; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
+            <hr style="opacity: 0;">
         </div>
   
     {% endfor %}
 
     {% if articles.has_other_pages %}
 
-        <ul class="pagination">
-
+        <ul class="pagination" style="" >
+            <div style="margin: auto; display: inline-flex;justify-content: space-between;">
             {% if articles.has_previous %}
-                <li><a href="?page={{ articles.previous_page_number }}">&laquo;</a></li>
+                <li  style="color: silver;"><a style="color: silver;" href="?page={{ articles.previous_page_number }}">&laquo;</a></li>
             {% else %}
-                <li class="disabled"><span>&laquo;</span></li>
+                <li class="disabled" style="color: silver;"><span>&laquo;</span></li>
             {% endif %}
 
             {% for i in articles.paginator.page_range %}
                 {% if articles.number == i %}
-                    <li class="active"><span> {{ i }} <span class="sr-only">{current}</span></span></li>
+                    <li class="active" style="padding-top: 3px; margin-left: 5px; margin-right: 5px; color: black; background-color: white;border-radius: 5px; width: 30px;height: 30px; text-align: center;"><span > {{ i }} <span  class="sr-only">{current}</span></span></li>
                 {% else %}
-                    <li><a href = "?page={{ i }}">{{ i }}</a></li>
+                    <li onmouseover="style.background='gray'" onmouseout="style.background='rgb(58, 57, 57)'" style="padding-top: 3px; margin-left: 5px; margin-right: 5px;  background-color: rgb(58, 57, 57);border-radius: 5px; width: 30px;height: 30px; text-align: center;" ><a style="color: white;"  href = "?page={{ i }}">{{ i }}</a></li>
                 {% endif %}
             {% endfor %}
 
             {% if articles.has_next %}
-                <li><a href="?page={{ articles.next_page_number }}">&raquo;</a></li>
+                <li  ><a style="color: silver;" href="?page={{ articles.next_page_number }}">&raquo;</a></li>
             {% else %}
                 <li class="disabled"><span>&raquo;</span></li>
             {% endif %}
-        
+            </div>
         </ul>
 
     {% endif %}
