--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li class="nav-item ">
-                    <a class="nav-link" href="{% url 'all_articles' %}">Articles<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'all_articles' %}">Landmarks<span class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- <li class="nav-item">
