minor design changes in landmark page

--- a/articles/templates/articles/all_articles.html
+++ b/articles/templates/articles/all_articles.html
@@ -3,12 +3,12 @@
 {% load static %}
 
 {% block content %}
-<div style="margin-top: 65px; margin-left: 10px;">
-    <div  style="width: 35%; background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin:20px;">
+<div style="margin-top: 65px; text-align: center;">
+    <div  style="width: 35%; background-image: linear-gradient(to right,rgb(0, 0, 0,0) ,silver, rgb(0, 0, 0,0) ); height: 2px;; margin:auto;">
 		<hr style="opacity: 0;">
 	</div>
     <h2 style="margin:20px;color: silver;">Landmarks</h2>
-    <div  style=" background-image: linear-gradient(to right,silver, rgb(0, 0, 0,0) 50%); height: 2px; margin:20px;width: 35%;">
+    <div  style=" background-image: linear-gradient(to right,rgb(0, 0, 0,0) ,silver, rgb(0, 0, 0,0) ); height: 2px; margin:auto;width: 35%;">
 		<hr style="opacity: 0;">
 	</div>
 </div>
