--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -99,7 +99,7 @@
         {% if user.is_authenticated %}
           {% for rec in recommend %}
           <div class="col-lg-4 col-md-4 col-12" style="margin:auto;padding: 10px;" >
-            <div class="card " style="width:400px; height: 550px;border-radius: 50px;padding: ;">
+            <div class="card " style="width:400px; height: 550px;border-radius: 50px;">
                 <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
                 <div class="card-body">
                   <a style="color:black ;text-decoration: none; " href="{% url 'articles:detail' slug=rec.slug %}" class="card-title"><h4>{{ rec.title }}</h4></a>
@@ -176,11 +176,16 @@
             <button  class="btn bg-dark text-white"><a  class="text-light" href="{% url 'articles:detail' slug=article.slug %}">Read More</a></button>
           
           </div>
+          <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
+            <hr style="opacity: 0;">
+          </div>
           <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
           <hr style="opacity: 0;">
         </div>
         </div>
-        
+        <div  style="opacity: .1; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
+          <hr style="opacity: 0;">
+        </div>
   
         {% endfor %}
   
