--- a/templates/home.html
+++ b/templates/home.html
@@ -28,8 +28,8 @@
     </div>
 </ul>
 
-<div onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px double silver' "  style="width:15%;padding:5px; margin:auto; border-radius:10px; border: '2px solid silver'" >
-        <div style="transition: 1s; border: 2px solid silver; border-radius: 10px;width: 100%;" onmouseout="style.border='0px solid black' " >
+<div onmouseover="this.style.color='black'; style.background ='silver' " onmouseout="style.background ='black'; this.style.border= '2px double silver' "  style="width:15%;padding:-15px; margin:auto; border-radius:10px; border: '2px solid silver'" >
+        <div style="transition: 1s; border: 2px solid silver; border-radius: 10px;width: 100%;height: 100%; padding: 8px;" onmouseout="style.border='0px solid black' " >
           <a class="nav-link" onmouseover="this.style.color='black';" style="text-align: center;color: silver; " onmouseout="this.style.color='silver';" href="{% url 'articles' %}" style="color: silver; ">Go To Home Page</a>
         </div>
 </div>    
