cards , margin and scroll design fix

--- a/articles/templates/articles/all_articles.html
+++ b/articles/templates/articles/all_articles.html
@@ -39,7 +39,7 @@
 
     {% if articles.has_other_pages %}
 
-        <ul class="pagination" style="" >
+        <ul class="pagination" style=" text-decoration: none;" >
             <div style="margin: auto; display: inline-flex;justify-content: space-between;">
             {% if articles.has_previous %}
                 <li  style="color: silver;"><a style="color: silver;" href="?page={{ articles.previous_page_number }}">&laquo;</a></li>
