--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,13 +3,12 @@
 {% load static %}
 
 {% block content %}
-<!-- <style>
-  img {
-   -moz-box-shadow:    inset 0 0 10px #000000;
-   -webkit-box-shadow: inset 0 0 10px #000000;
-   box-shadow:         inset 0 0 10px #000000;
+<style>
+  body{
+    overflow-x: hidden;
+    margin: ;
   }
-</style> -->
+</style>
 <div id="demo" class="carousel slide" data-ride="carousel">
 <!-- Indicators -->
 <ul class="carousel-indicators">
@@ -66,7 +65,7 @@
 
 <!-- Cards -->
 
-  <section class="mb-4 ml-3 mr-3">
+  <section class="mb-4 ml-3 mr-3" style="display: inline; justify-content: center;">
     <div class="container-fluid">
       <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin: 10px;margin-bottom: 25px; ">
         <hr style="opacity: 0;">
@@ -75,7 +74,7 @@
       <div  style="background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 2px;margin-top: 10px;margin-bottom: 38px;">
         <hr style="opacity: 0;">
       </div>
-      <div class="row ">
+      <div class="row   " style="margin: 0 auto;">
 
         <!-- {% for cardd in cards %}
         <div class="col-lg-4 col-md-4 col-12">
@@ -96,24 +95,25 @@
         {% endfor %} -->
 
         {% comment %}   RECOMMENDED ARTICLES  {% endcomment %}
-        
         {% if user.is_authenticated %}
           {% for rec in recommend %}
-          <div class="col-lg-4 col-md-4 col-12" style="margin:auto;padding: 10px;" >
-            <div class="card " style="width:400px; height: 550px;border-radius: 50px;">
-                <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
-                <div class="card-body">
-                  <a style="color:black ;text-decoration: none; " href="{% url 'articles:detail' slug=rec.slug %}" class="card-title"><h4>{{ rec.title }}</h4></a>
-                  <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
-                    <hr style="opacity: 0;">
+          <div style="margin: auto;">
+          <div class="col-lg-4 col-md-4 col-12" style="padding-top: 10px;padding-bottom: 10px;" >
+              <div class="card " style="width:400px; height: 550px;border-radius: 50px;">
+                  <img class="card-img-top" src="{{ rec.thumb.url }}" alt="Card image" style="height:200px; border-radius:50px;border-bottom-left-radius:00px;box-shadow: 2px 3px 5px rgb(49, 49, 49);  ">
+                  <div class="card-body">
+                    <a style="color:black ;text-decoration: none; " href="{% url 'articles:detail' slug=rec.slug %}" class="card-title"><h4>{{ rec.title }}</h4></a>
+                    <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
+                      <hr style="opacity: 0;">
+                    </div>
+                    <p class="card-text" >{{ rec.snippet }}</p>
+                        <div>
+                          <a style="position: absolute; bottom: 20px;" href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark">More</a>
+                        </div>
                   </div>
-                  <p class="card-text" >{{ rec.snippet }}</p>
-                      <div>
-                        <a style="position: absolute; bottom: 20px;" href="{% url 'articles:detail' slug=rec.slug %}" class="btn btn-dark">More</a>
-                      </div>
-                </div>
+              </div>
             </div>
-          </div>
+          </div> 
           {% endfor %}
         {% else %}
           <h5 style="margin: auto ; color:silver;"> **Please Sign In to see personalised recommendations**</h4>
@@ -182,19 +182,9 @@
           </div>
           
           </div>
-          <div  style="background-image: linear-gradient(to right,rgb(0, 0, 0), rgb(0, 0, 0,0)); height: 2px; margin: 10px;margin-left: -3px;">
-            <hr style="opacity: 0;">
-          </div>
-          <div  style="opacity: .5; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
-          <hr style="opacity: 0;">
-        </div>
-        </div>
-        <!-- <div  style="opacity: .1; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
-          <hr style="opacity: 0;">
-        </div>
           <div  style="opacity: .15; background-image: linear-gradient(to right, rgb(0, 0, 0,0),silver, rgb(0, 0, 0,0)); height: 1px;margin-top: 10px;margin-bottom: 38px;">
             <hr style="opacity: 0;">
-        </div> -->
+        </div>
   
         {% endfor %}
   
