Added actual contact info in footer

--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -30,9 +30,9 @@
 	  <article class="py-5 text-center">
 	    <div>
 	        <p>Contact Us On</p>
-	        <h3 class="display-4 ">+977 1111111111</h3>
+	        <h3 class="display-4 ">+977-9861237636</h3>
 	        <!-- <a href="#" class="btn btn-warning">Contact Us</a> -->
-			<p>xyz@gmail.com</p>
+			<p>tourism.aid@gmail.com</p>
 	    </div>
 	  </article>
 	</section>
