--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
     <div  style=" opacity: 0.6; background-image: linear-gradient(to right,rgb(0, 0, 0,0),rgb(0, 0, 0,0)35%, silver 50%,rgb(0, 0, 0,0)65%, rgb(0, 0, 0,0)); height: 2px;margin-top: -3px; ">
       <hr style="opacity: 0;">
     </div>            
-    <li><a class="nav-link "onmouseover=" this.style.color='black'; style.background ='linear-gradient(to right,rgb(0, 0, 0,0),rgb(0, 0, 0,0)35%, silver 50%,rgb(0, 0, 0,0)65%, rgb(0, 0, 0,0))'" href="{% url 'accounts:login' %}" onmouseout="this.style.color='silver'; style.background ='black'" href="{% url 'accounts:signup' %}"style=" padding: 15px; margin-bottom:-13px; color:silver; ">Signup</a></li>
+    <li><a class="nav-link "onmouseover=" this.style.color='black'; style.background ='linear-gradient(to right,rgb(0, 0, 0,0),rgb(0, 0, 0,0)35%, silver 50%,rgb(0, 0, 0,0)65%, rgb(0, 0, 0,0))'" onmouseout="this.style.color='silver'; style.background ='black'" href="{% url 'accounts:signup' %}" style=" padding: 15px; margin-bottom:-13px; color:silver; ">Signup</a></li>
     <div  style=" margin-top: -4px; opacity: 0.6; background-image: linear-gradient(to right,rgb(0, 0, 0,0),rgb(0, 0, 0,0)35%, silver 50%,rgb(0, 0, 0,0)65%, rgb(0, 0, 0,0)); height: 2px;">
       <hr style="opacity: 0;">
     </div>
