--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -42,10 +42,10 @@
                 <ul style="padding-top: 10px;" class="navbar-nav ml-auto">
 
                     <center>
-                <form class="form-inline mx-auto my-2 my-lg-0" style="margin-top: 25px; background-color: white; border-radius: 50px; padding-left: 20px;padding-right: 12px;">
+                <form class="form-inline mx-auto my-2 my-lg-0" style="margin-top: 25px; background-color: white; border-radius: 50px; padding-left: 20px;padding-right: 12px;" method="get" action="{% url 'search' %}">
 
-                        <input  class="form-control mr-sm-2" type="search" placeholder="where next...?" aria-label="Search" style="border: none;" >
-                <button class="btn btn-outline-secondary  my-2 my-sm-0" type="submit" style="border: none; background-color: white; color: gray; "> <i class="fa fa-search"></i></button>
+                        <input  name = "search" class="form-control mr-sm-2" type="search" placeholder="Where next...?" aria-label="Search" style="border: none;" >
+                        <button class="btn btn-outline-secondary  my-2 my-sm-0" type="submit" style="border: none; background-color: white; color: gray; "> <i class="fa fa-search"></i></button>
                 </form>
                 </center>
 
@@ -55,6 +55,10 @@
 
                 <li class="nav-item ">
                     <a class="nav-link" href="{% url 'all_articles' %}">Landmarks<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item ">
+                    <a class="nav-link" href="{% url 'hotels:hotels_list' %}">Hotels<span class="sr-only">(current)</span></a>
                 </li>
 
                 <!-- <li class="nav-item">
