--- a/templates/bs_base_layout.html
+++ b/templates/bs_base_layout.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'Signup.css' %}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+		<link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 		
 		<style type="text/css">
 			
